--- a/src/App.css
+++ b/src/App.css
@@ -44,18 +44,14 @@
 .leftSection1{
   height: 100%;
   width: 50%;
-  margin-top:5%;
+  margin: 5% auto auto auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .rightSection1{
   height: 100%;
   width: 48%;
-}
-.phoneframe{
-  margin-top: 0 auto;
-  height: 70%;
-  width:70%;
-  margin-right: 0 auto;
-  float:right 
 }
 .rightSection1Box{
   width:60%;
@@ -183,6 +179,13 @@
   background-color: #255285;
   cursor: pointer;
 }
+.phone-frames{
+  height: 70%;
+  width:70%;
+  justify-items: center;
+  /* float:right; */
+  display:flex;
+}
 .phoneframe2{
   height: 80%;
   float:right
@@ -193,10 +196,11 @@
 }
 .stores{
   display:inline-flex;
+  width: 70%;
+  justify-content: space-around;
 }
 .stores>img{
   height: 50px;
-  margin-left: 5px;
-  margin-right:5px;
-  margin-top: 10px;
+  margin-top: 1%;
+
 }
