--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .App {
   text-align: center;
   align-content: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .App-logo {
@@ -12,17 +14,6 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 10vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
@@ -39,25 +30,22 @@
 }
 .section1{
   display: flex;
-  height: 800px;
+  min-height: 100vh;
 }
 .leftSection1{
   height: 100%;
-  width: 50%;
-  margin: 5% auto auto auto;
+  width: 40%;
+  margin: 5% 0% auto auto;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.rightSection1{
-  height: 100%;
-  width: 48%;
-}
+
 .rightSection1Box{
-  width:60%;
+  width:50%;
   height: 100%;
   text-align: left;
-  margin-top: 30%;
+  margin-top: 10%;
 }
 .rightSection1Box>h1{
   font-size: 100px;
@@ -69,23 +57,44 @@
 .rightSection1Box>p{
   font-size: 20px;
 }
-.rightSection1Box>button{
-  width: 50%;
+.primary-btn-section1{
+  width: 25%;
   margin:0 auto;
   padding:10px;
   border: none;
   background-color: #397AC2;
-  color: white;
+  color: #f5f5f5;
   font-size: 18px;
+  font-family: 'Muli', sans-serif;
+  letter-spacing: .1em;
   border-radius: 5px;
+  justify-self: center;
 }
 .rightSection1Box>button:hover{
-  background-color: #255285;
+  background-color: #ABD1FC;
   cursor: pointer;
+  color: black;
 }
+
+.secondary-btn{
+  width: 25%;
+  margin:0 auto auto 2%;
+  padding:10px;
+  border-width: 1px;
+  border-color: #255285;
+  background-color:#f5f5f5;
+  color: black;
+  font-size: 18px;
+  font-family: 'Muli', sans-serif;
+  letter-spacing: .1em;
+  border-radius: 5px;
+  justify-self: center;
+}
+
 .section2{
   display: flex;
   height: 550px;
+  min-height: 50vh;
   background-color: #397AC2;
 }
 .innerSectionBox{
@@ -112,6 +121,8 @@
 .section3{
   display: flex;
   height: 800px;
+  min-height: 100vh;
+  max-height: 50vh;
   background-color: #3D3D3D;
 }
 .rightSection3{
@@ -183,8 +194,8 @@
   height: 70%;
   width:70%;
   justify-items: center;
-  /* float:right; */
   display:flex;
+  justify-content: right;
 }
 .phoneframe2{
   height: 80%;
@@ -194,6 +205,8 @@
   height: 100%;
   margin-top:20%;
 }
+
+
 .stores{
   display:inline-flex;
   width: 70%;
@@ -204,3 +217,17 @@
   margin-top: 1%;
 
 }
+.headline-h2{
+  font-family: 'Muli', sans-serif;
+  color: #373F41;
+  margin: 0;
+}
+.headline-p{
+  font-family: 'Montserrat';
+  font-size: 38px;
+  font-weight: 500;
+  text-align: left;
+  color: #737B7D;
+  width: 55%;
+}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Muli:wght@900&display=swap');
