--- a/src/App.css
+++ b/src/App.css
@@ -146,7 +146,7 @@ h1{
   float: right;
 }
 .section4{
-  height: 600px;
+  max-height: 10vh;
 }
 .section4>h1{
   font-size: 50px;
@@ -241,8 +241,9 @@ h1{
 }
 
 .section3-container{
-  background: rgb(57,122,194);
-  /* background: linear-gradient(90deg, rgba(57,122,194,1), rgba(61,61,61,1) ); */
+  background: rgba(61,61,61,1);
+  padding-bottom: 2%;
+
 }
 
 .headline-p{
