--- a/src/App.css
+++ b/src/App.css
@@ -124,15 +124,17 @@ h1{
 }
 .section3{
   display: flex;
-  min-height: 80vh;
+  height: 700px;
   max-height: 80vh;
   background-color: #3D3D3D;
+  padding-top: 1.3%;
+  padding-bottom: 1%;
 }
 .rightSection3{
   width:48%;
-  height: 100%;
+  height: 60%;
   text-align: left;
-  margin:9% auto auto auto;
+  margin:1% auto auto auto;
   justify-content: space-between;
 }
 .rightSection3>h2{
@@ -235,8 +237,8 @@ h1{
   align-self: center;
   background:  rgba(61,61,61,1);
   margin: 0;
-  padding-top: 1%;
-  font-size: 60px;
+  padding-top: 10%;
+  font-size: 65px;
   
 }
 
@@ -253,5 +255,28 @@ h1{
   text-align: left;
   color: #737B7D;
   width: 55%;
+}
+
+.fixed-btn{
+  position: fixed;
+  bottom:0;
+  right: 0;
+  width: 8%;
+  margin:1%;
+  margin-right: 0;
+  padding:.7%;
+  border-width: 1px;
+  border-color: black;
+  background-color:rgb(184, 217, 255);
+  color: black;
+  font-size: 18px;
+  font-family: 'Muli', sans-serif;
+  letter-spacing: .1em;
+  border-radius: 15px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  justify-self: center;
+  box-shadow: 2px 2px 3px black;
+  cursor: pointer;
 }
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Muli:wght@600&display=swap');
