--- a/src/App.css
+++ b/src/App.css
@@ -30,10 +30,22 @@ h1{
   display: flex;
   min-height: 100vh;
   align-items: center;
+  background-color: #f7f7f7;
 }
+
+.cross{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  height: 10%;
+  width: 100%;
+  /* border: 10px solid black; */
+  border-bottom: #373F41;
+}
+
 .leftSection1{
   width: 40%;
-  margin: 15% 0% auto auto;
+  margin: 12% 0% auto auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -43,7 +55,7 @@ h1{
   width:50%;
   height: 100%;
   text-align: left;
-  margin-top: 10%;
+  margin-top: 0%;
 }
 .rightSection1Box>h1{
   font-size: 100px;
@@ -97,8 +109,8 @@ h1{
 
 .section2{
   display: flex;
-  height: 550px;
-  background-color: #397AC2;
+  height: 600px;
+  background-color:#397AC2;
 }
 .innerSectionBox{
   height: 50%;
@@ -122,25 +134,25 @@ h1{
   margin-top: 20px;
   font-size:25px;
   text-align: left;
-  color: rgb(39, 39, 39);
+  color: #f7f7f7;
   list-style: none;
 }
 
 li{
   padding-bottom: 2.5%;
-
 }
 
 .ul-title{
   font-size: 55px;
   font-family: 'Muli', sans-serif;
-  color: rgb(39, 39, 39);
+  color: #f7f7f7;
+  text-decoration: underline;
 }
 .section3{
   display: flex;
   height: 700px;
   max-height: 80vh;
-  background-color: #3D3D3D;
+  background-color: rgb(41, 41, 41);
   padding-top: 1.3%;
   padding-bottom: 1%;
 }
@@ -249,19 +261,11 @@ li{
   font-family: 'Muli', sans-serif;
   color: #f5f5f5;
   align-self: center;
-  background:  rgba(61,61,61,1);
   margin: 0;
   padding-top: 10%;
   font-size: 65px;
   
 }
-
-.section3-container{
-  background: rgba(61,61,61,1);
-  padding-bottom: 2%;
-
-}
-
 .headline-p{
   font-family: 'Montserrat';
   font-size: 38px;
@@ -293,4 +297,7 @@ li{
   box-shadow: 2px 2px 3px black;
   cursor: pointer;
 }
+
+
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Muli:wght@600&display=swap');
