--- a/src/App.scss
+++ b/src/App.scss
@@ -90,37 +90,46 @@ h1 {
 
 .section2 {
   display: flex;
-  height: 600px;
+  flex-direction: column;
+  height: auto;
   background-color: #397ac2;
+  @media (min-width: $screen-sm-min) {
+    flex-direction: row;
+    height: 600px;
+  }
 }
 
 .innerSectionBox {
   height: 50%;
-  width: 30%;
+  width: 100%;
   margin: 0 auto;
   margin-top: 2%;
-
-  > {
-    h1 {
-      color: white;
+  @media (min-width: $screen-sm-min) {
+    width: 30%;
+      > img {
+        height: 40%;
+        margin: 0 auto;
+      }
     }
+  
 
-    img {
-      height: 40%;
-      margin: 0 auto;
-    }
+  > img {
+    width: 100px;
+    margin: 0 auto;
   }
 }
 
 .section2-list {
   font-family: "Muli", sans-serif;
-  width: 60%;
-  margin: 0 auto;
-  margin-top: 20px;
-  font-size: 20px;
-  text-align: left;
   color: #f7f7f7;
   list-style: none;
+  margin: 2%;
+  padding: 0;
+  @media (min-width: $screen-sm-min) {
+  width: 60%;
+  font-size: 20px;
+  text-align: left;
+  }
 }
 
 .section3 {
@@ -229,10 +238,14 @@ li {
 }
 
 .ul-title {
-  font-size: 55px;
+  font-size: 35px;
   font-family: "Muli", sans-serif;
   color: #f7f7f7;
   text-decoration: underline;
+  @media (min-width: $screen-sm-min) {
+    font-size: 55px;
+  }
+
 }
 
 .formTop {
@@ -368,7 +381,6 @@ li {
   }
 }
 
-
 .splash-screen-poly {
   display: none;
   @media (min-width: $screen-sm-min) {
@@ -380,73 +392,5 @@ li {
     border-bottom: #373f41;
   }
 }
-
-
-// // Rules for screens that at minimum the width of the max small screen screen.
-// @media (min-width: $screen-sm-max) {
-//   .section1 {
-//     flex-direction: column-reverse;
-//     margin-left: 0;
-//     align-items: stretch;
-//     margin: 3% 3%;
-//   }
-
-//   .rightSection1Box {
-//     width: 100%;
-//     @media (min-width: $screen-sm-max) {
-//       width: 100%;
-//       text-align: center;
-//     }
-//   }
-
-//   .leftSection1 {
-//     height: 50%;
-//     text-align: center;
-//     display: flex;
-//     flex-direction: column;
-//     margin: 3%;
-//     width: 100%;
-//   }
-
-//   .headline-p,
-//   .rightSection1Box {
-//     width: 100%;
-//     text-align: center;
-//   }
-
-//   .section-1-btns {
-//     width: 100%;
-//   }
-
-//   .primary-btn-section1 {
-//     width: 70%;
-//   }
-
-//   .secondary-btn {
-//     margin: 1%;
-//     width: 44%;
-//   }
-
-//   .android-phone {
-//     display: none;
-//   }
-
-//   .logo-large {
-//     width: 300px;
-//   }
-
-//   .cross {
-//     display: none;
-//   }
-
-//   .stores {
-//     width: 80%;
-
-//     > img {
-//       height: 40px;
-//       margin: 3%;
-//     }
-//   }
-// }
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Muli:wght@600&display=swap");
