--- a/src/App.scss
+++ b/src/App.scss
@@ -111,8 +111,6 @@ h1 {
         margin: 0 auto;
       }
     }
-  
-
   > img {
     width: 100px;
     margin: 0 auto;
@@ -134,31 +132,43 @@ h1 {
 
 .section3 {
   display: flex;
-  height: 700px;
-  max-height: 80vh;
+  flex-direction: column-reverse;
   background-color: rgb(41, 41, 41);
-  padding-top: 1.3%;
-  padding-bottom: 1%;
+  @media (min-width: $screen-sm-min) {
+    height: 700px;
+    max-height: 80vh;
+    padding-top: 1.3%;
+    padding-bottom: 1%;
+  }
 }
 
 .rightSection3 {
-  width: 48%;
-  height: 60%;
-  text-align: left;
+  width: 100%;
   margin: 1% auto auto auto;
   justify-content: space-between;
+  @media (min-width: $screen-sm-min) {
+    width: 48%;
+    height: 60%;
+    text-align: left;
+  }
 
   > h2 {
     font-size: 40px;
     color: white;
     cursor: pointer;
   }
+  
 }
 
 .leftSection3 {
-  height: 50%;
-  width: 45%;
-  float: right;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  @media (min-width: $screen-sm-min) {
+    float: right;
+    height: 50%;
+    width: 45%;
+  }
 }
 
 .section4 {
@@ -204,9 +214,13 @@ h1 {
 
 .step-header {
   font-family: "Muli", sans-serif;
-  font-size: 40px;
-  font-weight: 300;
+  font-size: 20px;
+
   cursor: pointer;
+
+  @media (min-width: $screen-sm-min) {
+    font-weight: 300;
+  }
 }
 
 // Not main section scss
@@ -297,7 +311,10 @@ li {
   align-self: center;
   margin: 0;
   padding-top: 10%;
-  font-size: 65px;
+  font-size: 30px;
+  @media (min-width: $screen-sm-min) {
+    font-size: 65px;
+  }
 }
 
 .headline-p {
