--- a/src/App.scss
+++ b/src/App.scss
@@ -25,7 +25,9 @@ h1 {
   // Mobile first
   display: flex;
   flex-direction: column-reverse;
-  min-height: 100vh;
+  // min-height: 100vh;
+  margin-top: 5%;
+  margin-bottom: 5%;
   background-color: #f7f7f7;
   // For the smallest non mobile device (non-mobile after)
   @media (min-width: $screen-sm-min) {
@@ -67,7 +69,7 @@ h1 {
   width: 100%;
   margin-top: 3%;
   @media (min-width: $screen-sm-min) {
-    width: 50%;
+    width: 35%;
     height: 100%;
     text-align: left;
     margin-top: 0%;
@@ -93,9 +95,13 @@ h1 {
   flex-direction: column;
   height: auto;
   background-color: #397ac2;
+  padding-top: 10%;
+  padding-bottom: 10%;
   @media (min-width: $screen-sm-min) {
     flex-direction: row;
-    height: 600px;
+    height: 700px;
+    padding-top: 0%;
+    padding-bottom: 0%;
   }
 }
 
@@ -103,18 +109,21 @@ h1 {
   height: 50%;
   width: 100%;
   margin: 0 auto;
-  margin-top: 2%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  > img {
+    width: 20%;
+    margin: 0 auto;
+  }
   @media (min-width: $screen-sm-min) {
     width: 30%;
       > img {
-        height: 40%;
+        height: 30%;
+        width: auto;
         margin: 0 auto;
       }
-    }
-  > img {
-    width: 100px;
-    margin: 0 auto;
   }
+
 }
 
 .section2-list {
@@ -123,22 +132,34 @@ h1 {
   list-style: none;
   margin: 2%;
   padding: 0;
+  margin: 0 auto;
+  margin-top: 20px;
+  width: 65%;
   @media (min-width: $screen-sm-min) {
-  width: 60%;
   font-size: 20px;
+  width: 80%;
   text-align: left;
   }
+}
+
+.section2-list > li{
+  text-align: center;
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
 
 .section3 {
   display: flex;
   flex-direction: column-reverse;
   background-color: rgb(41, 41, 41);
+  padding-bottom: 10%;
   @media (min-width: $screen-sm-min) {
     height: 700px;
     max-height: 80vh;
     padding-top: 1.3%;
     padding-bottom: 1%;
+    flex-direction: row;
+    padding-bottom: 0%;
   }
 }
 
@@ -147,9 +168,10 @@ h1 {
   margin: 1% auto auto auto;
   justify-content: space-between;
   @media (min-width: $screen-sm-min) {
-    width: 48%;
+    width: 40%;
     height: 60%;
     text-align: left;
+    margin-top: 8%;
   }
 
   > h2 {
@@ -230,10 +252,13 @@ li {
 
 .phone-frames {
   height: 70%;
-  width: 70%;
+  width: 60%;
   justify-items: center;
   align-self: center;
   display: flex;
+  @media (min-width: $screen-sm-min) {
+    width: 70%;
+  }
 }
 
 .iphone {
@@ -241,13 +266,16 @@ li {
 }
 
 .phoneframe2 {
-  height: 80%;
-  float: right;
-  margin-left: 10px;
-
+  height: 100%;
+  width: 100%;
   > img {
-    margin-top: 14%;
-    height: 600px;
+    height: 500px;
+  }
+  @media (min-width: $screen-sm-min) {
+    > img {
+      margin-top: 10%;
+      float: right;
+    }
   }
 }
 
@@ -303,6 +331,7 @@ li {
   font-family: "Muli", sans-serif;
   color: #373f41;
   margin: 0;
+  font-weight: bolder;
 }
 
 .headline-h2-section3 {
@@ -318,16 +347,19 @@ li {
 }
 
 .headline-p {
-  width: 100%;
+  width: 60%;
   text-align: center;
-
+  margin: 0 auto;
+  margin-top: 5%;
+  margin-bottom: 5%;
   @media (min-width: $screen-sm-min) {
     font-family: "Montserrat";
     font-size: 38px;
     font-weight: 500;
     text-align: left;
     color: #737b7d;
-    width: 55%;
+    width: 90%;
+    float: left;
   }
 }
 
@@ -375,7 +407,7 @@ li {
   justify-self: center;
 
   @media (min-width: $screen-sm-min) {
-    width: 25%;
+    width: 200px;
   }
 }
 
