made join beta buttom look better on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -367,15 +367,15 @@ li {
   position: fixed;
   bottom: 0;
   right: 0;
-  width: 8%;
+  width: 13%;
   margin: 1%;
   margin-right: 0;
-  padding: 0.7%;
+  padding: 1.7%;
   border-width: 1px;
   border-color: black;
   background-color: rgb(184, 217, 255);
   color: black;
-  font-size: 18px;
+  font-size: 16px;
   font-family: "Muli", sans-serif;
   letter-spacing: 0.1em;
   border-radius: 15px;
@@ -384,6 +384,13 @@ li {
   justify-self: center;
   box-shadow: 2px 2px 3px black;
   cursor: pointer;
+
+  @media (min-width: $screen-sm-min) {
+    font-size: 16px;
+    width: 8%;
+    padding: .7%;
+
+  }
 }
 
 .logo-large {
