--- a/src/App.scss
+++ b/src/App.scss
@@ -439,12 +439,13 @@ li {
 
 .splash-screen-poly {
   display: none;
-  @media (min-width: $screen-sm-min) {
+  @media (min-width: $screen-md-min) {
     position: absolute;
     right: 0;
     bottom: 0;
-    height: 10%;
+    height: 22%;
     width: 100%;
+    display:unset;
     border-bottom: #373f41;
   }
 }
