--- a/src/App.scss
+++ b/src/App.scss
@@ -402,6 +402,7 @@ li {
 .primary-btn-section1 {
   width: 55%;
   margin: 0 auto;
+  max-width: 170px;
   padding: 10px;
   border: none;
   background-color: #397ac2;
@@ -420,7 +421,7 @@ li {
 
 .secondary-btn {
   margin: 1%;
-  width: 55%;
+  min-width: 150px;
   padding: 10px;
   border-width: 1px;
   border-color: #255285;
