--- a/src/App.scss
+++ b/src/App.scss
@@ -117,13 +117,12 @@ h1 {
   }
   @media (min-width: $screen-sm-min) {
     width: 30%;
-      > img {
-        height: 30%;
-        width: auto;
-        margin: 0 auto;
-      }
+    > img {
+      height: 30%;
+      width: auto;
+      margin: 0 auto;
+    }
   }
-
 }
 
 .section2-list {
@@ -136,13 +135,13 @@ h1 {
   margin-top: 20px;
   width: 65%;
   @media (min-width: $screen-sm-min) {
-  font-size: 20px;
-  width: 80%;
-  text-align: left;
+    font-size: 20px;
+    width: 80%;
+    text-align: left;
   }
 }
 
-.section2-list > li{
+.section2-list > li {
   text-align: center;
   margin-top: 2%;
   margin-bottom: 2%;
@@ -179,7 +178,6 @@ h1 {
     color: white;
     cursor: pointer;
   }
-  
 }
 
 .leftSection3 {
@@ -287,7 +285,6 @@ li {
   @media (min-width: $screen-sm-min) {
     font-size: 55px;
   }
-
 }
 
 .formTop {
@@ -368,7 +365,7 @@ li {
   bottom: 0;
   right: 0;
   width: 13%;
-  margin: 1%;
+  margin: 4%;
   margin-right: 0;
   padding: 1.7%;
   border-width: 1px;
@@ -388,9 +385,37 @@ li {
   @media (min-width: $screen-sm-min) {
     font-size: 16px;
     width: 8%;
-    padding: .7%;
-
+    padding: 0.7%;
   }
+}
+
+.fixed-footer {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  text-align: right;
+  border-width: 1px;
+  border-color: black;
+  background-color: rgb(184, 217, 255);
+  color: black;
+  font-size: 16px;
+  font-family: "Muli", sans-serif;
+  letter-spacing: 0.1em;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  box-shadow: 2px 2px 3px black;
+  cursor: pointer;
+
+  @media (min-width: $screen-sm-min) {
+    font-size: 16px;
+    width: 100%;
+    padding: 0.7%;
+  }
+}
+
+.footer-link {
+  color: black;
+  margin-right: "5%";
 }
 
 .logo-large {
