--- a/src/App.scss
+++ b/src/App.scss
@@ -369,6 +369,10 @@ li {
   letter-spacing: 0.1em;
   width: 100%;
   padding: 0.7%;
+
+  @media (max-width: $screen-sm-min) {
+    font-size: 10px;
+  }
 }
 
 .footer-link {
