Adding styling to form

--- a/src/App.scss
+++ b/src/App.scss
@@ -441,4 +441,20 @@ li {
   margin: 2%;
 }
 
+.background {
+  background-color: #255285;
+}
+
+.title {
+  text-align: center;
+  font-size: 36px;
+  font-weight: bolder;
+}
+
+.subtitle {
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+}
+
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Muli:wght@600&display=swap");
