Added styling to form input and labels

--- a/src/App.scss
+++ b/src/App.scss
@@ -470,4 +470,14 @@ li {
   border: none;
 }
 
+.input-label {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.form-input {
+  width: 20%;
+  text-align: center;
+}
+
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Muli:wght@600&display=swap");
