Make form test left align

--- a/src/App.scss
+++ b/src/App.scss
@@ -494,5 +494,7 @@ li {
 .form-input-small {
   text-align: center;
 }
-
+form {
+  text-align: left;
+}
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Muli:wght@600&display=swap");
