--- a/src/App.scss
+++ b/src/App.scss
@@ -10,9 +10,10 @@ $screen-md-min: 1200px; // < 1200 px (large desktops
 
 /* Global Styles */
 :root {
-  --primary-color: #1d589a;
+  --primary-color: #1471eb;
   --secondary-color: #abd1fc;
   --light-color: #f5f5f5;
+  --dark-color: rgb(41, 41, 41);
 }
 
 .color-primary {
@@ -168,9 +169,8 @@ h1 {
 
 .section3 {
   display: flex;
-  flex-direction: column-reverse;
-  background-color: rgb(41, 41, 41);
-  padding-bottom: 10%;
+  align-items: center;
+  background-color: var(--dark-color);
   @media (min-width: $screen-sm-min) {
     height: 700px;
     max-height: 80vh;
@@ -283,8 +283,6 @@ li {
 }
 
 .phoneframe2 {
-  height: 100%;
-  width: 100%;
   > img {
     height: 500px;
   }
@@ -341,13 +339,6 @@ li {
       margin-top: 1%;
     }
   }
-}
-
-.headline-h2 {
-  font-family: "Muli", sans-serif;
-  color: #373f41;
-  margin: 0;
-  font-weight: bolder;
 }
 
 .headline-h2-section3 {
