--- a/src/App.scss
+++ b/src/App.scss
@@ -186,27 +186,15 @@ h1 {
   margin: 1% auto auto auto;
   justify-content: space-between;
   @media (min-width: $screen-sm-min) {
-    width: 40%;
     height: 60%;
     text-align: left;
-    margin-top: 8%;
+    margin-top: 4%;
   }
 
   > h2 {
     font-size: 40px;
     color: white;
     cursor: pointer;
-  }
-}
-
-.leftSection3 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  @media (min-width: $screen-sm-min) {
-    float: right;
-    height: 50%;
-    width: 45%;
   }
 }
 
@@ -269,10 +257,8 @@ li {
 
 .phone-frames {
   height: 70%;
-  width: 60%;
-  justify-items: center;
-  align-self: center;
   display: flex;
+  justify-content: flex-end;
   @media (min-width: $screen-sm-min) {
     width: 70%;
   }
@@ -284,7 +270,6 @@ li {
 
 .phoneframe2 {
   width: 100%;
-  padding-bottom: 10%;
   > img {
     height: 500px;
   }
