--- a/src/App.scss
+++ b/src/App.scss
@@ -12,9 +12,9 @@ $screen-md-min: 1200px; // < 1200 px (large desktops
 :root {
   --primary-color: #1471eb;
   --secondary-color: #abd1fc;
-  --light-color: #f5f5f5;
+  --inactive-color: #f5f5f5;
   --dark-color: rgb(41, 41, 41);
-  --white-color: #ffffff;
+  --light-color: #ffffff;
 }
 
 .color-primary {
@@ -147,7 +147,7 @@ h1 {
 
 .section2-list {
   font-family: "Muli", sans-serif;
-  color: var(--white-color);
+  color: var(--light-color);
   list-style: none;
   margin: 2%;
   padding: 0;
@@ -388,7 +388,7 @@ li {
   padding: 10px;
   border: none;
   background-color: var(--primary-color);
-  color: var(--white-color);
+  color: var(--light-color);
   font-size: 18px;
   font-family: "Muli", sans-serif;
   letter-spacing: 0.1em;
