--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,7 @@ $screen-md-min: 1200px; // < 1200 px (large desktops
 /* Global Styles */
 :root {
   --primary-color: #1471eb;
-  --secondary-color: #abd1fc;
+  --active-color: #abd1fc;
   --inactive-color: #f5f5f5;
   --dark-color: rgb(41, 41, 41);
   --light-color: #ffffff;
@@ -21,8 +21,8 @@ $screen-md-min: 1200px; // < 1200 px (large desktops
   color: var(--primary-color);
 }
 
-.color-secondary {
-  color: var(--secondary-color);
+.color-active {
+  color: var(--active-color);
 }
 
 .color-light {
@@ -81,7 +81,7 @@ h1 {
 }
 
 .rightSection1Box > button:hover {
-  background-color: var(--secondary-color);
+  background-color: var(--active-color);
   cursor: pointer;
   color: black;
 }
@@ -358,7 +358,7 @@ li {
   position: fixed;
   bottom: 0;
   text-align: right;
-  background-color: var(--secondary-color);
+  background-color: var(--active-color);
   font-family: "Muli", sans-serif;
   letter-spacing: 0.1em;
   width: 100%;
@@ -445,7 +445,7 @@ li {
   padding: 1%;
   font-size: 24px;
   border-radius: 8px;
-  background-color: var(--secondary-color);
+  background-color: var(--active-color);
   border: none;
 }
 
