--- a/src/App.scss
+++ b/src/App.scss
@@ -35,12 +35,10 @@ $screen-md-min: 1200px; // < 1200 px (large desktops
 
 .screens {
   max-height: 500px;
+  padding: 5%;
 
-  @media (max-width: $screen-sm-min) {
-    padding-top: 5%;
-    padding-right: 5%;
-    padding-left: 5%;
-    padding-bottom: 5%;
+  @media (min-width: $screen-sm-min) {
+    padding: 0%;
   }
 }
 
@@ -199,11 +197,13 @@ h1 {
 .rightSection3 {
   width: 100%;
   margin: auto;
-  justify-content: space-between;
   @media (min-width: $screen-sm-min) {
-    height: 60%;
+    // height: 60%;
     text-align: left;
-    margin-top: 4%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
   > h2 {
