--- a/src/App.scss
+++ b/src/App.scss
@@ -196,14 +196,9 @@ h1 {
 
 .rightSection3 {
   width: 100%;
-  margin: auto;
+  margin-bottom: 5%;
   @media (min-width: $screen-sm-min) {
-    // height: 60%;
     text-align: left;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
   }
 
   > h2 {
@@ -309,7 +304,7 @@ li {
   padding-top: 10%;
   font-size: 20px;
   @media (min-width: $screen-sm-min) {
-    font-size: 65px;
+    font-size: 45px;
   }
 }
 
