--- a/src/App.scss
+++ b/src/App.scss
@@ -33,15 +33,6 @@ $screen-md-min: 1200px; // < 1200 px (large desktops
   max-width: 100%;
 }
 
-.screens {
-  max-height: 500px;
-  padding: 5%;
-
-  @media (min-width: $screen-sm-min) {
-    padding: 0%;
-  }
-}
-
 h1 {
   font-family: "Muli", sans-serif;
 }
@@ -182,7 +173,8 @@ h1 {
 
 .section3 {
   display: flex;
-  align-items: center;
+  flex-direction: column-reverse;
+  padding-bottom: 10%;
   background-color: var(--dark-color);
   @media (min-width: $screen-sm-min) {
     height: 700px;
@@ -190,15 +182,29 @@ h1 {
     padding-top: 1.3%;
     padding-bottom: 1%;
     flex-direction: row;
-    padding-bottom: 0%;
+  }
+}
+
+.leftSection3 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  @media (min-width: $screen-sm-min) {
+    float: right;
+    height: 50%;
+    width: 45%;
   }
 }
 
 .rightSection3 {
   width: 100%;
-  margin-bottom: 5%;
+  margin: 1% auto auto auto;
+  justify-content: space-between;
   @media (min-width: $screen-sm-min) {
+    width: 40%;
+    height: 60%;
     text-align: left;
+    margin-top: 8%;
   }
 
   > h2 {
@@ -238,6 +244,7 @@ li {
 }
 
 .phoneframe2 {
+  height: 100%;
   width: 100%;
   > img {
     height: 500px;
