--- a/src/App.scss
+++ b/src/App.scss
@@ -122,12 +122,11 @@ h1 {
   flex-direction: column;
   height: auto;
   background-color: var(--primary-color);
-  padding-top: 10%;
-  padding-bottom: 10%;
+  padding-top: 5%;
   @media (min-width: $screen-sm-min) {
     flex-direction: row;
-    height: 700px;
-    padding-top: 0%;
+    height: 300px;
+    padding-top: 2%;
     padding-bottom: 0%;
   }
 }
@@ -135,9 +134,8 @@ h1 {
 .innerSectionBox {
   height: 50%;
   width: 100%;
-  margin: 0 auto;
-  margin-top: 5%;
-  margin-bottom: 5%;
+  margin: 1% auto;
+
   > img {
     width: 20%;
     margin: 0 auto;
@@ -145,7 +143,7 @@ h1 {
   @media (min-width: $screen-sm-min) {
     width: 30%;
     > img {
-      height: 30%;
+      height: 40%;
       width: auto;
       margin: 0 auto;
     }
@@ -261,12 +259,9 @@ li {
 }
 
 .ul-title {
-  font-size: 35px;
+  font-size: 2rem;
   font-family: "Muli", sans-serif;
   color: var(--light-color);
-  @media (min-width: $screen-sm-min) {
-    font-size: 55px;
-  }
 }
 
 .formTop {
